# lab05

./: .gitignore  CMakeLists.txt  README.md  coverage-report.account.cpp.5adc30691eefd58f9b9607f3ee79ceb3.html  coverage-report.account.hpp.a969a3c78eef05f7a2b568b2890acec8.html  coverage-report.functions.html  coverage-report.html  coverage-report.transaction.cpp.93f646c90be7c5557d4795a1d843d047.html
.github/workflows/: ci.yml
banking/: Account.cpp  Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
banking/tests/: AccountTest.cpp  TransactionTest.cpp
include/: account.hpp  transaction.hpp
src/: .account.cpp.swp  account.cpp  transaction.cpp
tests/: test_account.cpp  test_transaction.cpp
tests/mocks/: mock_account.hpp
